--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,5 @@
 [core]
     autostage = true
+    remote = remla-dvc-remote
 ['remote "remla-dvc-remote"']
     url = gdrive://1ddEL3ba0laMZWBVVCl8giVmjYeMJrUoN
