--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,8 +1,11 @@
 stages:
   get_data:
-    cmd: python src/data/get_data.py
+    cmd: python src/data/get_data.py data/train.txt data/test.txt data/val.txt
     deps:
     - src/data/get_data.py
+    - data/train.txt
+    - data/test.txt
+    - data/val.txt
     outs:
     - output/raw_x_train.joblib
     - output/raw_y_train.joblib
