--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
+python = ">=3.9,<3.11"
 numpy = "^1.26.4"
 keras = ">=2.15.0,<2.16"
 matplotlib = "^3.8.4"
@@ -21,6 +21,10 @@ seaborn = "^0.13.2"
 tensorflow-io-gcs-filesystem = "0.31.0"
 tensorflow = "2.15.0"
 tensorflow-intel = {version="^2.15.0", platform = "win32"}
+
+dvc = "3.50.1"
+dvc-gdrive = "3.0.1"
+dslinter = "2.0.9"
 
 
 [build-system]
