--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -5,19 +5,22 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: 3.10
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies for pylint
       run: | 
         python -m pip install --upgrade pip
         pip install pylint
     - name: Analysing the code with pylint, score should be above 9
       run: |
-        pylint src/ --fail-under=9.0
+        pylint src/ --rcfile=.pylintrc --fail-under=9.0
     - name: Install dependencies for bandit
       run: |
         pip install bandit
