--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies for pylint
       run: | 
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint==2.17
     - name: Analysing the code with pylint, score should be above 9
       run: |
         pylint src/ --rcfile=.pylintrc --fail-under=9.0
