--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -18,9 +18,9 @@ jobs:
       run: | 
         python -m pip install --upgrade pip
         pip install pylint==2.17
-    - name: Analysing the code with pylint, score should be above 9
+    - name: Analysing the code with pylint, score should be 10
       run: |
-        pylint src/ --rcfile=.pylintrc --fail-under=9.0
+        pylint src/ --rcfile=.pylintrc --fail-under=10.0
     - name: Install dependencies for bandit
       run: |
         pip install bandit
