--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -27,3 +27,6 @@ jobs:
     - name: Analysing the code with bandit, no security issues should be found
       run: |
         bandit -c bandit.yaml -r .
+    - name: Run Pytest
+      run: |
+        pytest
