--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ matplotlib = "^3.8.4"
 pandas = "^2.2.2"
 scikit-learn = "^1.4.2"
 seaborn = "^0.13.2"
+pytest =  "^8.2.1"
 
 dvc = "3.50.1"
 dvc-gdrive = "3.0.1"
