--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,13 +14,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Run poetry
-      uses: abatilo/actions-poetry@v2
-      with:
-        poetry-version: ${{ matrix.poetry-version }}
+    - name: Install poetry
+      run: | 
+        python -m pip install --upgrade pip
+        pip install poetry
     - name: View poetry --help
       run: poetry --help
-
     - name: Install packages
       run: poetry install
     - name: Run Pytest
