--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,7 +9,7 @@ jobs:
         # https://github.com/actions/setup-python
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
-      - name: Setup a local virtual environment (if no poetry.toml file)
+      - name: Setup a local virtual environment (if no poetry.toml)
         run: |
           poetry config virtualenvs.create true --local
           poetry config virtualenvs.in-project true --local
