--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^2.2.2"
 scikit-learn = "^1.4.2"
 seaborn = "^0.13.2"
 pytest =  "^8.2.1"
+pytest-cov = "^1.7.0"
 
 dvc = "3.50.1"
 dvc-gdrive = "3.0.1"
